# video2gen

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  OPERATIONS.md  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
remotion-video/: package-lock.json  package.json  preview.mjs  render-still.mjs  render.mjs
remotion-video/src/: Root.tsx  SingleStylePreview.tsx  VideoComposition.tsx  types.ts
remotion-video/src/components/: PlaceholderSegment.tsx  (+5 more)
src/v2g/: __init__.py  agent.py  asset_context.py  asset_ingest.py  asset_library_layout.py  asset_metrics.py  asset_normalize.py  asset_prefetch.py  asset_resolver.py  asset_review_ui.py  asset_store.py  autocap.py  bilibili.py  checkpoint.py  cli.py  config.py  cost.py  editor.py  eval.py  feature_extractor.py  fetcher.py  image_prepare.py  image_source.py  intake.py  llm.py  material_library.py  openai_auth.py  page_quality.py  pipeline.py  preparer.py  quality_profile.py  recorder.py  retention.py  scene_data_validator.py  schema.py  script_fixer.py  scriptwriter.py  selector.py  slides.py  style_catalog.py  (+4 more)
tests/: test_asset_library_layout.py  test_asset_metrics.py  test_asset_resolver.py  test_asset_review_ui.py  test_eval.py  test_input_adapters.py  test_intake.py  test_material_library.py  test_openai_auth.py  test_page_quality.py  test_preparer_local_video.py  test_schema.py  test_scout_url_extractor.py  test_script_fixer.py  test_scriptwriter_cinematography.py  test_scriptwriter_sidecars.py  test_shot_timing_alignment.py  test_wechat_seed.py  test_workflow_contract.py
(+152 files in other folders)
